src/parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl
   5        | decls stmt

   6  fdecl : DEF ID ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   7  formals_opt :
   8              | formal_list

   9  formal_list : ID
  10              | formal_list COMMA ID

  11  dict_formal_list : ID COLON expr
  12                   | LITERAL COLON expr
  13                   | dict_formal_list COMMA ID COLON expr
  14                   | dict_formal_list COMMA LITERAL COLON expr

  15  vdecl_list :
  16             | vdecl_list vdecl

  17  vdecl : prim_decl_prefix SEMI
  18        | node_decl_prefix SEMI
  19        | graph_decl_prefix SEMI
  20        | list_decl_prefix SEMI
  21        | dict_decl_prefix SEMI

  22  prim_type : BOOL
  23            | NUM
  24            | STRING

  25  data_type : prim_type
  26            | DICT
  27            | LIST
  28            | NODE
  29            | GRAPH

  30  prim_decl_prefix : prim_type ID
  31                   | prim_type ID ASSIGN expr
  32                   | prim_decl_prefix COMMA ID ASSIGN expr
  33                   | prim_decl_prefix COMMA ID

  34  node_decl_prefix : NODE ID
  35                   | NODE ID LPAREN expr RPAREN
  36                   | node_decl_prefix COMMA ID LPAREN expr RPAREN
  37                   | node_decl_prefix COMMA ID

  38  graph_decl_prefix : GRAPH ID
  39                    | GRAPH ID ASSIGN LBRACE edge_op_list RBRACE
  40                    | graph_decl_prefix COMMA ID

  41  list_decl_prefix : LIST LT data_type GT ID
  42                   | LIST LT data_type GT ID ASSIGN LBRACKET actuals_list RBRACKET
  43                   | list_decl_prefix COMMA LT data_type GT ID
  44                   | list_decl_prefix COMMA LT data_type GT ID ASSIGN LBRACKET actuals_list RBRACKET

  45  dict_decl_prefix : DICT LT data_type COMMA data_type GT ID
  46                   | DICT LT data_type COMMA data_type GT ID ASSIGN LBRACE dict_formal_list RBRACE
  47                   | dict_decl_prefix COMMA DICT LT data_type COMMA data_type GT ID

  48  edge_op_list : edge_op
  49               | edge_op_list COMMA edge_op

  50  edge_op : ID
  51          | ID UEDGE ID
  52          | ID REDGE ID
  53          | ID REDGE LBRACKET expr RBRACKET ID
  54          | ID UEDGE LBRACKET expr RBRACKET ID
  55          | ID LBRACKET expr RBRACKET UEDGE LBRACKET expr RBRACKET ID

  56  stmt_list :
  57            | stmt_list stmt

  58  stmt : expr SEMI
  59       | edge_op SEMI
  60       | RETURN expr SEMI
  61       | LBRACE stmt_list RBRACE
  62       | IF LPAREN expr RPAREN stmt
  63       | IF LPAREN expr RPAREN stmt ELSE stmt
  64       | FOR LPAREN ID IN ID RPAREN LBRACE vdecl_list stmt_list RBRACE
  65       | WHILE LPAREN expr RPAREN LBRACE vdecl_list stmt_list RBRACE

  66  expr : LITERAL
  67       | INF
  68       | TRUE
  69       | FALSE
  70       | ID LBRACKET expr RBRACKET
  71       | ID
  72       | expr PLUS expr
  73       | expr MINUS expr
  74       | expr TIMES expr
  75       | expr DIVIDE expr
  76       | expr EQ expr
  77       | expr NEQ expr
  78       | expr LT expr
  79       | expr LEQ expr
  80       | expr GT expr
  81       | expr GEQ expr
  82       | expr LOGAND expr
  83       | expr LOGOR expr
  84       | ID ASSIGN expr
  85       | ID LPAREN actuals_opt RPAREN
  86       | ID DOT ID
  87       | ID DOT ID LPAREN actuals_opt RPAREN
  88       | LPAREN expr RPAREN

  89  actuals_opt :
  90              | actuals_list

  91  actuals_list : expr
  92               | actuals_list COMMA expr

  93  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (93)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (93)

	.  reduce 93


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)
	decls : decls . stmt  (5)

	LPAREN  shift 5
	LBRACE  shift 6
	RETURN  shift 7
	IF  shift 8
	FOR  shift 9
	WHILE  shift 10
	DEF  shift 11
	BOOL  shift 12
	NUM  shift 13
	STRING  shift 14
	NODE  shift 15
	GRAPH  shift 16
	LIST  shift 17
	DICT  shift 18
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 23
	EOF  shift 24
	.  error

	vdecl  goto 25
	fdecl  goto 26
	stmt  goto 27
	expr  goto 28
	prim_decl_prefix  goto 29
	node_decl_prefix  goto 30
	graph_decl_prefix  goto 31
	list_decl_prefix  goto 32
	dict_decl_prefix  goto 33
	prim_type  goto 34
	edge_op  goto 35


state 5
	expr : LPAREN . expr RPAREN  (88)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 37


state 6
	stmt : LBRACE . stmt_list RBRACE  (61)
	stmt_list : .  (56)

	.  reduce 56

	stmt_list  goto 38


state 7
	stmt : RETURN . expr SEMI  (60)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 39


state 8
	stmt : IF . LPAREN expr RPAREN stmt  (62)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (63)

	LPAREN  shift 40
	.  error


state 9
	stmt : FOR . LPAREN ID IN ID RPAREN LBRACE vdecl_list stmt_list RBRACE  (64)

	LPAREN  shift 41
	.  error


state 10
	stmt : WHILE . LPAREN expr RPAREN LBRACE vdecl_list stmt_list RBRACE  (65)

	LPAREN  shift 42
	.  error


state 11
	fdecl : DEF . ID ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)

	ID  shift 43
	.  error


state 12
	prim_type : BOOL .  (22)

	.  reduce 22


state 13
	prim_type : NUM .  (23)

	.  reduce 23


state 14
	prim_type : STRING .  (24)

	.  reduce 24


state 15
	node_decl_prefix : NODE . ID  (34)
	node_decl_prefix : NODE . ID LPAREN expr RPAREN  (35)

	ID  shift 44
	.  error


state 16
	graph_decl_prefix : GRAPH . ID  (38)
	graph_decl_prefix : GRAPH . ID ASSIGN LBRACE edge_op_list RBRACE  (39)

	ID  shift 45
	.  error


state 17
	list_decl_prefix : LIST . LT data_type GT ID  (41)
	list_decl_prefix : LIST . LT data_type GT ID ASSIGN LBRACKET actuals_list RBRACKET  (42)

	LT  shift 46
	.  error


state 18
	dict_decl_prefix : DICT . LT data_type COMMA data_type GT ID  (45)
	dict_decl_prefix : DICT . LT data_type COMMA data_type GT ID ASSIGN LBRACE dict_formal_list RBRACE  (46)

	LT  shift 47
	.  error


state 19
	expr : TRUE .  (68)

	.  reduce 68


state 20
	expr : FALSE .  (69)

	.  reduce 69


state 21
	expr : INF .  (67)

	.  reduce 67


state 22
	expr : LITERAL .  (66)

	.  reduce 66


23: reduce/reduce conflict (reduce 50, reduce 71) on SEMI
state 23
	edge_op : ID .  (50)
	edge_op : ID . UEDGE ID  (51)
	edge_op : ID . REDGE ID  (52)
	edge_op : ID . REDGE LBRACKET expr RBRACKET ID  (53)
	edge_op : ID . UEDGE LBRACKET expr RBRACKET ID  (54)
	edge_op : ID . LBRACKET expr RBRACKET UEDGE LBRACKET expr RBRACKET ID  (55)
	expr : ID . LBRACKET expr RBRACKET  (70)
	expr : ID .  (71)
	expr : ID . ASSIGN expr  (84)
	expr : ID . LPAREN actuals_opt RPAREN  (85)
	expr : ID . DOT ID  (86)
	expr : ID . DOT ID LPAREN actuals_opt RPAREN  (87)

	LPAREN  shift 48
	LBRACKET  shift 49
	DOT  shift 50
	ASSIGN  shift 51
	UEDGE  shift 52
	REDGE  shift 53
	SEMI  reduce 50
	PLUS  reduce 71
	MINUS  reduce 71
	TIMES  reduce 71
	DIVIDE  reduce 71
	EQ  reduce 71
	NEQ  reduce 71
	LT  reduce 71
	LEQ  reduce 71
	GT  reduce 71
	GEQ  reduce 71
	LOGAND  reduce 71
	LOGOR  reduce 71


state 24
	program : decls EOF .  (1)

	.  reduce 1


state 25
	decls : decls vdecl .  (3)

	.  reduce 3


state 26
	decls : decls fdecl .  (4)

	.  reduce 4


state 27
	decls : decls stmt .  (5)

	.  reduce 5


state 28
	stmt : expr . SEMI  (58)
	expr : expr . PLUS expr  (72)
	expr : expr . MINUS expr  (73)
	expr : expr . TIMES expr  (74)
	expr : expr . DIVIDE expr  (75)
	expr : expr . EQ expr  (76)
	expr : expr . NEQ expr  (77)
	expr : expr . LT expr  (78)
	expr : expr . LEQ expr  (79)
	expr : expr . GT expr  (80)
	expr : expr . GEQ expr  (81)
	expr : expr . LOGAND expr  (82)
	expr : expr . LOGOR expr  (83)

	SEMI  shift 54
	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	LOGAND  shift 65
	LOGOR  shift 66
	.  error


state 29
	vdecl : prim_decl_prefix . SEMI  (17)
	prim_decl_prefix : prim_decl_prefix . COMMA ID ASSIGN expr  (32)
	prim_decl_prefix : prim_decl_prefix . COMMA ID  (33)

	SEMI  shift 67
	COMMA  shift 68
	.  error


state 30
	vdecl : node_decl_prefix . SEMI  (18)
	node_decl_prefix : node_decl_prefix . COMMA ID LPAREN expr RPAREN  (36)
	node_decl_prefix : node_decl_prefix . COMMA ID  (37)

	SEMI  shift 69
	COMMA  shift 70
	.  error


state 31
	vdecl : graph_decl_prefix . SEMI  (19)
	graph_decl_prefix : graph_decl_prefix . COMMA ID  (40)

	SEMI  shift 71
	COMMA  shift 72
	.  error


state 32
	vdecl : list_decl_prefix . SEMI  (20)
	list_decl_prefix : list_decl_prefix . COMMA LT data_type GT ID  (43)
	list_decl_prefix : list_decl_prefix . COMMA LT data_type GT ID ASSIGN LBRACKET actuals_list RBRACKET  (44)

	SEMI  shift 73
	COMMA  shift 74
	.  error


state 33
	vdecl : dict_decl_prefix . SEMI  (21)
	dict_decl_prefix : dict_decl_prefix . COMMA DICT LT data_type COMMA data_type GT ID  (47)

	SEMI  shift 75
	COMMA  shift 76
	.  error


state 34
	prim_decl_prefix : prim_type . ID  (30)
	prim_decl_prefix : prim_type . ID ASSIGN expr  (31)

	ID  shift 77
	.  error


state 35
	stmt : edge_op . SEMI  (59)

	SEMI  shift 78
	.  error


state 36
	expr : ID . LBRACKET expr RBRACKET  (70)
	expr : ID .  (71)
	expr : ID . ASSIGN expr  (84)
	expr : ID . LPAREN actuals_opt RPAREN  (85)
	expr : ID . DOT ID  (86)
	expr : ID . DOT ID LPAREN actuals_opt RPAREN  (87)

	LPAREN  shift 48
	LBRACKET  shift 79
	DOT  shift 50
	ASSIGN  shift 51
	SEMI  reduce 71
	RPAREN  reduce 71
	RBRACE  reduce 71
	RBRACKET  reduce 71
	COMMA  reduce 71
	PLUS  reduce 71
	MINUS  reduce 71
	TIMES  reduce 71
	DIVIDE  reduce 71
	EQ  reduce 71
	NEQ  reduce 71
	LT  reduce 71
	LEQ  reduce 71
	GT  reduce 71
	GEQ  reduce 71
	LOGAND  reduce 71
	LOGOR  reduce 71


state 37
	expr : expr . PLUS expr  (72)
	expr : expr . MINUS expr  (73)
	expr : expr . TIMES expr  (74)
	expr : expr . DIVIDE expr  (75)
	expr : expr . EQ expr  (76)
	expr : expr . NEQ expr  (77)
	expr : expr . LT expr  (78)
	expr : expr . LEQ expr  (79)
	expr : expr . GT expr  (80)
	expr : expr . GEQ expr  (81)
	expr : expr . LOGAND expr  (82)
	expr : expr . LOGOR expr  (83)
	expr : LPAREN expr . RPAREN  (88)

	RPAREN  shift 80
	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	LOGAND  shift 65
	LOGOR  shift 66
	.  error


state 38
	stmt_list : stmt_list . stmt  (57)
	stmt : LBRACE stmt_list . RBRACE  (61)

	LPAREN  shift 5
	LBRACE  shift 6
	RBRACE  shift 81
	RETURN  shift 7
	IF  shift 8
	FOR  shift 9
	WHILE  shift 10
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 23
	.  error

	stmt  goto 82
	expr  goto 28
	edge_op  goto 35


state 39
	stmt : RETURN expr . SEMI  (60)
	expr : expr . PLUS expr  (72)
	expr : expr . MINUS expr  (73)
	expr : expr . TIMES expr  (74)
	expr : expr . DIVIDE expr  (75)
	expr : expr . EQ expr  (76)
	expr : expr . NEQ expr  (77)
	expr : expr . LT expr  (78)
	expr : expr . LEQ expr  (79)
	expr : expr . GT expr  (80)
	expr : expr . GEQ expr  (81)
	expr : expr . LOGAND expr  (82)
	expr : expr . LOGOR expr  (83)

	SEMI  shift 83
	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	LOGAND  shift 65
	LOGOR  shift 66
	.  error


state 40
	stmt : IF LPAREN . expr RPAREN stmt  (62)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (63)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 84


state 41
	stmt : FOR LPAREN . ID IN ID RPAREN LBRACE vdecl_list stmt_list RBRACE  (64)

	ID  shift 85
	.  error


state 42
	stmt : WHILE LPAREN . expr RPAREN LBRACE vdecl_list stmt_list RBRACE  (65)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 86


state 43
	fdecl : DEF ID . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)

	ID  shift 87
	.  error


state 44
	node_decl_prefix : NODE ID .  (34)
	node_decl_prefix : NODE ID . LPAREN expr RPAREN  (35)

	LPAREN  shift 88
	SEMI  reduce 34
	COMMA  reduce 34


state 45
	graph_decl_prefix : GRAPH ID .  (38)
	graph_decl_prefix : GRAPH ID . ASSIGN LBRACE edge_op_list RBRACE  (39)

	ASSIGN  shift 89
	SEMI  reduce 38
	COMMA  reduce 38


state 46
	list_decl_prefix : LIST LT . data_type GT ID  (41)
	list_decl_prefix : LIST LT . data_type GT ID ASSIGN LBRACKET actuals_list RBRACKET  (42)

	BOOL  shift 12
	NUM  shift 13
	STRING  shift 14
	NODE  shift 90
	GRAPH  shift 91
	LIST  shift 92
	DICT  shift 93
	.  error

	prim_type  goto 94
	data_type  goto 95


state 47
	dict_decl_prefix : DICT LT . data_type COMMA data_type GT ID  (45)
	dict_decl_prefix : DICT LT . data_type COMMA data_type GT ID ASSIGN LBRACE dict_formal_list RBRACE  (46)

	BOOL  shift 12
	NUM  shift 13
	STRING  shift 14
	NODE  shift 90
	GRAPH  shift 91
	LIST  shift 92
	DICT  shift 93
	.  error

	prim_type  goto 94
	data_type  goto 96


state 48
	expr : ID LPAREN . actuals_opt RPAREN  (85)
	actuals_opt : .  (89)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	RPAREN  reduce 89

	expr  goto 97
	actuals_list  goto 98
	actuals_opt  goto 99


state 49
	edge_op : ID LBRACKET . expr RBRACKET UEDGE LBRACKET expr RBRACKET ID  (55)
	expr : ID LBRACKET . expr RBRACKET  (70)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 100


state 50
	expr : ID DOT . ID  (86)
	expr : ID DOT . ID LPAREN actuals_opt RPAREN  (87)

	ID  shift 101
	.  error


state 51
	expr : ID ASSIGN . expr  (84)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 102


state 52
	edge_op : ID UEDGE . ID  (51)
	edge_op : ID UEDGE . LBRACKET expr RBRACKET ID  (54)

	LBRACKET  shift 103
	ID  shift 104
	.  error


state 53
	edge_op : ID REDGE . ID  (52)
	edge_op : ID REDGE . LBRACKET expr RBRACKET ID  (53)

	LBRACKET  shift 105
	ID  shift 106
	.  error


state 54
	stmt : expr SEMI .  (58)

	.  reduce 58


state 55
	expr : expr PLUS . expr  (72)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 107


state 56
	expr : expr MINUS . expr  (73)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 108


state 57
	expr : expr TIMES . expr  (74)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 109


state 58
	expr : expr DIVIDE . expr  (75)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 110


state 59
	expr : expr EQ . expr  (76)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 111


state 60
	expr : expr NEQ . expr  (77)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 112


state 61
	expr : expr LT . expr  (78)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 113


state 62
	expr : expr LEQ . expr  (79)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 114


state 63
	expr : expr GT . expr  (80)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 115


state 64
	expr : expr GEQ . expr  (81)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 116


state 65
	expr : expr LOGAND . expr  (82)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 117


state 66
	expr : expr LOGOR . expr  (83)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 118


state 67
	vdecl : prim_decl_prefix SEMI .  (17)

	.  reduce 17


state 68
	prim_decl_prefix : prim_decl_prefix COMMA . ID ASSIGN expr  (32)
	prim_decl_prefix : prim_decl_prefix COMMA . ID  (33)

	ID  shift 119
	.  error


state 69
	vdecl : node_decl_prefix SEMI .  (18)

	.  reduce 18


state 70
	node_decl_prefix : node_decl_prefix COMMA . ID LPAREN expr RPAREN  (36)
	node_decl_prefix : node_decl_prefix COMMA . ID  (37)

	ID  shift 120
	.  error


state 71
	vdecl : graph_decl_prefix SEMI .  (19)

	.  reduce 19


state 72
	graph_decl_prefix : graph_decl_prefix COMMA . ID  (40)

	ID  shift 121
	.  error


state 73
	vdecl : list_decl_prefix SEMI .  (20)

	.  reduce 20


state 74
	list_decl_prefix : list_decl_prefix COMMA . LT data_type GT ID  (43)
	list_decl_prefix : list_decl_prefix COMMA . LT data_type GT ID ASSIGN LBRACKET actuals_list RBRACKET  (44)

	LT  shift 122
	.  error


state 75
	vdecl : dict_decl_prefix SEMI .  (21)

	.  reduce 21


state 76
	dict_decl_prefix : dict_decl_prefix COMMA . DICT LT data_type COMMA data_type GT ID  (47)

	DICT  shift 123
	.  error


state 77
	prim_decl_prefix : prim_type ID .  (30)
	prim_decl_prefix : prim_type ID . ASSIGN expr  (31)

	ASSIGN  shift 124
	SEMI  reduce 30
	COMMA  reduce 30


state 78
	stmt : edge_op SEMI .  (59)

	.  reduce 59


state 79
	expr : ID LBRACKET . expr RBRACKET  (70)

	LPAREN  shift 5
	TRUE  shift 19
	FALSE  shift 20
	INF  shift 21
	LITERAL  shift 22
	ID  shift 36
	.  error

	expr  goto 125


state 80
	expr : LPAREN expr RPAREN .  (88)

	.  reduce 88


state 81
	stmt : LBRACE stmt_list RBRACE .  (61)

	.  reduce 61


state 82
	stmt_list : stmt_list stmt .  (57)

	.  reduce 57


state 83
	stmt : RETURN expr SEMI .  (60)

	.  reduce 60

